# CheckersAI

./: CMakeLists.txt  README.md  checkers_board.cpp  checkers_board.h  error_log.txt  main.cpp
Catch2/: serialization_tests.cpp
checkers_board/: checkers_board.cpp  checkers_board.h
